--- a/package.json
+++ b/package.json
@@ -1,39 +1,22 @@
 {
-  "name": "tsc-files",
-  "version": "0.0.0",
-  "description": "A tiny tool to run tsc on specific files without ignoring tsconfig.json",
+  "name": "@aki77/vue-tsc-files",
+  "version": "0.1.0",
+  "description": "A tiny tool to run vue-tsc on specific files without ignoring tsconfig.json",
   "license": "MIT",
-  "author": "Gustavo P. Cardoso <https://twitter.com/gustavo_pch>",
-  "repository": "github:gustavopch/tsc-files",
+  "author": "aki77",
+  "repository": "https://github.com/aki77/vue-tsc-files.git",
   "bin": {
-    "tsc-files": "lib/index.js"
+    "vue-tsc-files": "lib/index.js"
   },
   "files": [
     "lib"
   ],
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
-  },
-  "prettier": {
-    "arrowParens": "avoid",
-    "semi": false,
-    "singleQuote": true,
-    "trailingComma": "all"
-  },
   "peerDependencies": {
-    "typescript": ">=3"
+    "typescript": ">=4",
+    "vue-tsc": "^0.3.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "11.0.0",
-    "@commitlint/config-conventional": "11.0.0",
-    "husky": "4.3.6",
-    "typescript": "4.1.3"
+    "typescript": "^4.4.3",
+    "vue-tsc": "^0.3.0"
   }
 }
