chore: yarn upgrade

--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   ],
   "peerDependencies": {
     "typescript": ">=4",
-    "vue-tsc": "^0.28.1"
+    "vue-tsc": "*"
   },
   "devDependencies": {
     "typescript": "^4.4.3",
-    "vue-tsc": "^0.28.1"
+    "vue-tsc": "^0.29.0"
   }
 }
